# gpu-particle-system

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  imgui_color_gradient.cpp  imgui_color_gradient.h  imgui_curve_editor.cpp  imgui_curve_editor.h  main.cpp
src/shader/: curl_noise.glsl  depth_prepass_fs.glsl  mesh_fs.glsl  mesh_vs.glsl  particle_emission_cs.glsl  particle_fs.glsl  particle_initialize_cs.glsl  particle_simulate_cs.glsl  particle_simulation_cs.glsl  particle_update_kickoff_cs.glsl  particle_vs.glsl  random.glsl  render_fs.glsl  render_vs.glsl  simplex_noise.glsl
